# omt_scraping

./: .gitignore  pyproject.toml  readme.md
omt/: TOC.html  combine_pdfs.py  new_omt_slugs.csv  scrapy.cfg  toc_slugs.csv  update_slugs.py  updated_slugs.csv
omt/omt/: items.py  middlewares.py  pipelines.py  settings.py
omt/omt/spiders/: omt_spider.py
