[tool.poetry]
name = "omt_scraping"
version = "0.1.0"
description = ""
authors = ["likethebourbon <williams.evanpaul@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scrapy = "^2.5.0"
pandas = "^1.2.4"
PyPDF2 = "^1.28.2"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
pylint = "^2.8.3"
flake8 = "^3.9.2"
bandit = "^1.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
